<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosidl_typesupport_tests</name>
  <version>3.2.2</version>
  <description>Test rosidl_typesupport_c and rosidl_typesupport_cpp packages</description>
  <maintainer email="jacob@openrobotics.org">Jacob Perron</maintainer>
  <license>Apache License 2.0</license>
  <author email="brianchen.chen@mail.utoronto.ca">Brian Chen</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>action_msgs</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>rcutils</test_depend>
  <test_depend>rmw</test_depend>
  <test_depend>rmw_implementation</test_depend>
  <test_depend>rosidl_cmake</test_depend>
  <test_depend>rosidl_generator_cpp</test_depend>
  <test_depend>rosidl_typesupport_c</test_depend>
  <test_depend>rosidl_typesupport_cpp</test_depend>
  <test_depend>service_msgs</test_depend>
  <test_depend>test_interface_files</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
